--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,3 +1,11 @@
+:root {
+    /* Custom Colors */
+    --main-heading: #F5E0C3;
+
+    --modal-bg: rgba(255, 255, 255, 0.95);
+    --modal-text: #222222;
+}
+
 @font-face {
     font-family: 'Inter';
     font-weight: 400;
