--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -37,7 +37,32 @@ body::before {
     display: none;
 }
 
+.modal__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    background-color: var(--modal-bg);
+    border-radius: 0.5rem;
+    padding: 0 1.5rem 1rem;
+
+    #bookForm {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        width: 80%;
+        gap: 0.75rem;
+
+        .modal__btn--read {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+    }
+}
+
 .modal__btn--title,
 #readLabel {
-    color: var(--modal--subtext);
+    color: var(--modal-btn--text);
 }
