aligned modal title to the left to be in line with the whole form

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -57,12 +57,19 @@ body::before {
 
         width: 80%;
         gap: 1rem;
+    }
 
-        .modal__btn--read {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
+    
+    .modal__btn--read {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+    }
+
+    .modal__btn--title {
+        align-self: flex-start;
+        margin-bottom: 0.75rem;
     }
 
     .close__btn {
