--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -55,16 +55,18 @@ body::before {
         flex-direction: column;
         align-items: center;
 
-        width: 80%;
         gap: 1rem;
     }
 
-    
-    .modal__btn--read {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+    .submit__btn {
         width: 100%;
+        padding: 0.6rem 1rem;
+        font-size: 1rem;
+
+        border-radius: 0.5rem;
+        background-color: var(--modal-bg);
+        color: var(--modal-btn--text);
+        box-shadow: 0 2px 5px rgba(0,0,0,0.3);
     }
 
     .modal__btn--title {
