--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -40,7 +40,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 1000; /* above everything */
+    z-index: 999; /* above everything */
 
     .modal__overlay {
         position: absolute;
@@ -54,11 +54,21 @@ body::before {
 }
 
 .modal__content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+        position: relative;
+        margin: 15vh auto;
+        padding: 0 2rem 2rem;
+        width: 80%;
 
-    position: relative;
+        background: var(--light-semi--transparent); /* semi-opaque white */
+        border-radius: 12px;    /* rounded corners */
+        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3); /* floating shadow */
+        backdrop-filter: blur(10px);  /* subtle blur inside card */
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+        z-index: 1000;
 
     #bookForm {
         display: flex;
