--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -59,7 +59,8 @@ body::before {
         padding: 0 2rem 2rem;
         width: 80%;
 
-        background: var(--light-semi--transparent); /* semi-opaque white */
+        background: url('../assets/images/modal-bg.jpg'); /* semi-opaque white */
+        background-size: cover;
         border-radius: 12px;    /* rounded corners */
         box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3); /* floating shadow */
         backdrop-filter: blur(10px);  /* subtle blur inside card */
@@ -71,6 +72,7 @@ body::before {
 
         .modal__title {
             margin-bottom: 1rem;
+            color: var(--modal-btn--text);
         }
 
     #bookForm {
@@ -119,10 +121,38 @@ body::before {
     .book {
         display: flex;
         flex-direction: column;
+        align-items: flex-start;
         gap: 0.5rem;
 
-        background-color: var(--modal-bg);
+        background-image: url('../assets/images/book-bg4.jpg');
+        background-size: cover;
+
+        box-shadow: 0 2px 6px rgba(0,0,0,0.1);
         border-radius: 0.5rem;
         padding: 1rem;
+
+        .book__title,
+        .book__author,
+        .book__year,
+        .book__pages,
+        .book__status {
+            border-bottom: 1px solid var(--modal--subtext);
+            border-radius: 0.25rem;
+
+            padding: 0.25rem 0.5rem;
+            width: 100%;
+        }
+
+        .edit-btn,
+        .delete-btn {
+            padding: 0.4rem 0.8rem;
+            font-size: 1rem;
+            width: 100%;
+
+            border-radius: 0.5rem;
+            background-color: var(--modal-bg);
+            color: var(--modal-btn--text);
+            box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+        }
     }
 }
