--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,7 @@ body {
     background-size: cover;
     background-position: center;
     min-height: 100svh;
-    padding: 8vw;
+    padding: 0 8vw;
 }
 
 body::before {
@@ -60,11 +60,11 @@ body::before {
         padding: 0 2rem 2rem;
         width: 80%;
 
-        background: url('../assets/images/modal-bg.jpg'); /* semi-opaque white */
+        background: url('../assets/images/modal-bg.jpg') no-repeat ; /* semi-opaque white */
         background-size: cover;
+        background-position: center top;
         border-radius: 12px;    /* rounded corners */
-        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3); /* floating shadow */
-        backdrop-filter: blur(10px);  /* subtle blur inside card */
+
 
         display: flex;
         flex-direction: column;
@@ -116,7 +116,6 @@ body::before {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 
-    width: 100%;
     gap: 1rem;
 
     .book {
