--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,6 +19,18 @@ body::before {
     z-index: -1;
 }
 
+.header {
+    width: 100vw;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    gap: 1rem;
+
+    background-color: hsla(0, 0%, 0%, 0.5);
+}
+
 .main__title {
     color: var(--main-heading);
     margin: 1rem 0 0;
@@ -26,10 +38,11 @@ body::before {
 
 #openModal {
     padding: 0.5rem 1rem;
+    margin-bottom: 1.5rem;
     font-size: 1rem;
 
     border-radius: 0.5rem;
-    background-color: var(--modal-bg);
+    background-color: var(--main-heading);
     color: var(--modal-btn--text);
     box-shadow: 0 2px 5px rgba(0,0,0,0.3);
 }
